Fix errors caused by rebase